fix logo on mobile

--- a/themes/ossn-theme/static/css/common.css
+++ b/themes/ossn-theme/static/css/common.css
@@ -100,6 +100,10 @@ input, textarea {
   width: 100%;
 }
 
+html {
+  background-color: var(--background-color);
+}
+
 #wrapper {
     background-color: var(--background-color);
     display: flex;
